Added Spring Security (DB based Authentication) and Audit Aware based on Spring Security

--- a/src/assets/javascripts/bootdemo/index/templates/welcome.html
+++ b/src/assets/javascripts/bootdemo/index/templates/welcome.html
@@ -1,8 +1,32 @@
 <div class="card">
 	<div class="card-content">
-		<div class="card-title"><h4>Spring Boot Demo with Angular using Asset Pipeline</h4></div>
-		<p>Hi Guys! Let's get started with this Single Page Application.
-			Click on User to get started.</p>
+		<div class="card-title"><h4>Spring Boot App with AngularJS using Asset Pipeline, Spring Security and AuditAware</h4></div>
+		<p>List of features this project have:</p>
+		
+		<ul class="bullet-list" style="margin-left: 25px">
+			<li>Single page app in which angular code is well managed based on modules</li>
+			<li>Spring Security - Authentication from database</li>
+			<li>AuditorAware based on Spring Security for tracking who last modified entity</li>
+		</ul>
+	
+		<p>For the demo, two user's have been created. Login with foloowing credentials:</p>
+		<ol class="numbered-list" style="margin-left: 25px">
+			<li>
+				<p>Admin User having <b>ROLE_ADMIN</b>. Since this is admin user, it has insert/update/delete rights. 
+				Credentials are:</p>
+					<p style="margin-left: 25px"><b>Username:</b> admin@boot.com <br/>
+					<b>Password:</b> admin</p>					
+			</li>
+			<li>
+				<p>Normal User having <b>ROLE_USER</b>. This user has viw only rights and does not have insert/update/delete rights.
+				Credentials are:</p>
+					<p style="margin-left: 25px"><b>Username:</b> user@boot.com <br/> 
+					<b>Password:</b> user</p>
+			    </li>
+		</ol>
+		<p>
+			Let's Explore the app by Login. And one more thing! Star <a href="https://github.com/gharia/spring-boot-angular" target="_blank">this</a> repository in Guthub if you like this porject 
+		</p>
 
 	</div>
 </div>
